--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
-@media only screen and (min-width: 961px) {
+html,
+body {
+    height: 100%;
+}
+
+body {
+    margin: 0;
+}
+
+
+
+@media only screen and (min-width: 1401px) {
     body {
-        width: 960px;
+        width: 1400px;
         margin: 0 auto;
     }
 }
