Added toast for adding products

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <h1>Shopping List</h1>
 
+<p-toast position="bottom-center"></p-toast>
+
 <div class="cardContainer">
   <p-card class="productCard" [style]="{'width':'22em', 'margin': '1em'}" *ngFor="let product of products">
     <div class="cardInnerContainer">
@@ -28,4 +30,6 @@
 
     </div>
   </p-card>
+
+
 </div>
