--- a/src/app/components/overview/overview.component.css
+++ b/src/app/components/overview/overview.component.css
@@ -1,37 +1,124 @@
-section{
+.headerContainer {
+    background: rgb(152, 142, 255);
+    background: linear-gradient(0deg, rgba(152, 142, 255, 1) 37%, rgba(88, 160, 245, 1) 100%);
+    position: relative;
+    height: 25em;
+    margin-bottom: 1em;
+    border-bottom-left-radius: 2em;
+    border-bottom-right-radius: 2em;
+}
+
+.headerTextContainer {
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    max-width: 13em;
+    padding-top: 4em;
+    z-index: 2;
+    position: relative;
+    /* border: 1px solid black; */
+}
+
+.header {
+    font-size: 2em;
+    color: rgb(240, 240, 240);
+    margin-top: 0;
+}
+
+.subHeader {
+    color: rgb(73, 73, 73);
+}
+
+.smartphoneImg {
+    width: 5em;
+    transform: rotate(-15deg);
+    position: absolute;
+    bottom: 2em;
+    left: 0;
+}
+
+@media only screen and (min-width: 801px) {
+    .header {
+        font-size: 3em;
+    }
+    .smartphoneImg {
+        width: 10em;
+    }
+
+    .headerTextContainer {
+        margin-left: 20em;
+        margin-right: 5em;
+        text-align: left;
+        max-width: none;
+    }
+}
+
+@media only screen and (min-width: 1401px) {
+
+}
+
+
+section {
     animation: fadeInAnimation ease 0.75s;
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
     opacity: 0;
-} 
+}
+
+.sectionContainer {
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+}
+
+
+
+@media only screen and (min-width: 1401px) {
+    section {
+        width: 48%;
+    }
+
+    .sectionContainer {
+        justify-content: space-between;
+        flex-wrap: wrap;
+        flex-direction: row;
+    }
+}
 
 @keyframes fadeInAnimation {
     0% {
         opacity: 0;
     }
+
     100% {
         opacity: 1;
     }
 }
 
-.section1{
+.section1 {
     animation-delay: 0.1s;
 }
-.section2{
+
+.section2 {
     animation-delay: 0.2s;
 }
-.section3{
+
+.section3 {
     animation-delay: 0.3s;
 }
-.section4{
+
+.section4 {
     animation-delay: 0.4s;
 }
-.section5{
+
+.section5 {
     animation-delay: 0.5s;
 }
-.section6{
+
+.section6 {
     animation-delay: 0.6s;
 }
-.section7{
+
+.section7 {
     animation-delay: 0.7s;
 }
