--- a/src/app/components/overview/overview.component.html
+++ b/src/app/components/overview/overview.component.html
@@ -1,38 +1,70 @@
-<h1>Modern Web Developement with Angular</h1>
-<p>By Patrick Fritzl</p>
+<div class="headerContainer">
+    <img src="assets/Smartphone_no_text.png" class="smartphoneImg">
+    <div class="headerTextContainer">
+        <h1 class="header">Modern Web Developement with Angular</h1>
+        <p class="subHeader">By Patrick Fritzl</p>
+    </div>
+</div>
 
-<section class="section1">
-    <h2>Kurzzusammenfassung</h2>
-    <p>Ein Kurs zum Einstieg in das moderne Entwickeln mit Angular, HTML, CSS und JavaScript/Typescript</p>
-</section>
+<div class="sectionContainer">
+    <section class="section1">
+        <p-panel header="Kurzzusammenfassung" [toggleable]="true">
+            <p>
+                Ein Kurs zum Einstieg in das moderne Entwickeln mit Angular, HTML, CSS und JavaScript/Typescript
+            </p>
+        </p-panel>
+    </section>
 
-<section class="section2">
-    <h2>Mobile First</h2>
-    <p>Die Website wird in Hinsicht zu Mobilen Geräten erstellt, sowie auch für Tablets und Desktop</p>
-</section>
+    <section class="section2">
+        <p-panel header="Mobile First" [toggleable]="true">
+            <p>
+                Die Website wird in Hinsicht zu Mobilen Geräten erstellt, sowie auch für Tablets und Desktop
+            </p>
+        </p-panel>
+    </section>
 
-<section class="section3">
-    <h2>Clean UI</h2>
-    <p>Mittels PrimeNG in Kombination mit selbstgeschriebenem CSS und HTML werden moderne User-Interface Elemente erstellt.</p>
-</section>
+    <section class="section3">
+        <p-panel header="Clean UI" [toggleable]="true">
+            <p>
+                Mittels PrimeNG in Kombination mit selbstgeschriebenem CSS und HTML werden moderne User-Interface
+                Elemente
+                erstellt.
+            </p>
+        </p-panel>
+    </section>
 
-<section class="section4">
-    <h2>Interactivity</h2>
-    <p>Durch Databinding und Typescript werden ganz leicht Variablen eingelesen bzw. ausgegeben im Browser</p>
-</section>
+    <section class="section4">
+        <p-panel header="Interactivity" [toggleable]="true">
+            <p>
+                Durch Databinding und Typescript werden ganz leicht Variablen eingelesen bzw. ausgegeben im Browser
+            </p>
+        </p-panel>
+    </section>
 
-<section class="section5">
-    <h2>Zeit</h2>
-    <p>Mindestens 4 Einheiten zu je 2h. Je nach Nachfrage mehr möglich</p>
-</section>
+    <section class="section5">
+        <p-panel header="Zeit" [toggleable]="true">
+            <p>
+                Mindestens 4 Einheiten zu je 2h. Je nach Nachfrage mehr möglich
+                
+            </p>
+            <p style="visibility: hidden;">a</p>
+        </p-panel>
+    </section>
 
-<section class="section6">
-    <h2>Benötigte Kenntnisse</h2>
-    <p>Grundlegende Programmierkenntnisse (egal welche Sprache)</p>
-    <p>Grundlegendes HTML & CSS Verständnis</p>
-</section>
+    <section class="section6">
+        <p-panel header="Benötigte Kenntnisse" [toggleable]="true">
+            <p>Grundlegende Programmierkenntnisse (egal welche Sprache)</p>
+            <p>Grundlegendes HTML & CSS Verständnis</p>
+        </p-panel>
+    </section>
 
-<section class="section7">
-    <h2>Ziel (Wird weiter ausgebaut, falls nachfrage am Kurs besteht)</h2>
-    <p>https://modernwebdevwithangular.web.app/</p>
-</section>
+    <section class="section7">
+        <p-panel header="Ziel (Wird weiter ausgebaut, falls nachfrage am Kurs besteht)" [toggleable]="true">
+            <p>
+                https://modernwebdevwithangular.web.app/
+            </p>
+        </p-panel>
+    </section>
+</div>
+
+<a href="http://www.freepik.com">Designed by Freepik</a>
