Zufrieden mit design

--- a/src/app/components/overview/overview.component.html
+++ b/src/app/components/overview/overview.component.html
@@ -6,6 +6,8 @@
     </div>
 </div>
 
+
+
 <div class="sectionContainer">
     <section class="section1">
         <p-panel header="Kurzzusammenfassung" [toggleable]="true">
@@ -66,5 +68,9 @@
         </p-panel>
     </section>
 </div>
-
-<a href="http://www.freepik.com">Designed by Freepik</a>
+<div class="designedByFreepik">
+    <br>
+    <br>
+    <p style="margin-bottom: 0;">Smartphone image:</p>
+    <a href="http://www.freepik.com">Designed by Freepik</a>    
+</div>
