--- a/src/app/components/overview/overview.component.css
+++ b/src/app/components/overview/overview.component.css
@@ -2,60 +2,76 @@
     background: rgb(152, 142, 255);
     background: linear-gradient(0deg, rgba(152, 142, 255, 1) 37%, rgba(88, 160, 245, 1) 100%);
     position: relative;
-    height: 25em;
+    height: 18em;
     margin-bottom: 1em;
     border-bottom-left-radius: 2em;
     border-bottom-right-radius: 2em;
 }
 
 .headerTextContainer {
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
-    max-width: 13em;
-    padding-top: 4em;
+    margin: 0 2em;
+    padding-top: 3.5em;
     z-index: 2;
     position: relative;
     /* border: 1px solid black; */
 }
 
 .header {
-    font-size: 2em;
+    font-size: 2.25em;
     color: rgb(240, 240, 240);
     margin-top: 0;
 }
 
 .subHeader {
-    color: rgb(73, 73, 73);
+    color: rgb(240, 240, 240);
+    width: 100%;
 }
 
 .smartphoneImg {
-    width: 5em;
-    transform: rotate(-15deg);
+    width: 6em;
+    transform: rotate(0deg);
     position: absolute;
     bottom: 2em;
-    left: 0;
+    right: 2em;
+    display: none;
+    animation: fadeInAnimation ease 2s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+
+.designedByFreepik{
+    display: none;
 }
 
 @media only screen and (min-width: 801px) {
     .header {
-        font-size: 3em;
+        font-size: 3.5em;
     }
+
+    .headerContainer{
+        height: 25em;
+    }
+    
     .smartphoneImg {
         width: 10em;
+        transform: rotate(-25deg);
+        left: -1em;
+        display: block;
     }
 
     .headerTextContainer {
-        margin-left: 20em;
+        margin-left: 18em;
         margin-right: 5em;
         text-align: left;
         max-width: none;
+        padding-top: 6em;
+    }
+
+    .designedByFreepik{
+        display: block;
     }
 }
 
-@media only screen and (min-width: 1401px) {
-
-}
 
 
 section {
@@ -70,7 +86,6 @@ section {
     flex-direction: column;
     gap: 1em;
 }
-
 
 
 @media only screen and (min-width: 1401px) {
